# msgpack-rust

rmp/: Cargo.toml
