[package]
name = "rmp"
version = "0.8.14"
authors = ["Evgeny Safronov <division494@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT"
description = "Pure Rust MessagePack serialization implementation"
repository = "https://github.com/butlergroup/msgpack-rust"
documentation = "https://docs.rs/rmp"
readme = "README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2024"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
# This is macro_only ;)
paste = { git = "https://github.com/butlergroup/paste.git" } # forked to resolve RUSTSEC-2024-0436 with the paste crate

[features]
default = ["std"]
std = ["byteorder/std", "num-traits/std"]

[[example]]
name = "inspect"
required-features = ["std"]

[dev-dependencies]
quickcheck = "1.0.3"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[badges]
maintenance = { status = "looking-for-maintainer" }
